app/assets/stylesheets/application.css.scss
/* ... */
#layout-top-navigation {
  padding-right: 0;
}

#layout-second-nav {
  margin-bottom: 0;

  .logo {
    width: 244px;
    height: 116px;
    background-color: $white;
    text-indent: -99999px;
    background-image: image-url('nav_logo.png');
    vertical-align: top;
  }

  ul.sections {
    margin-top: 10px;
    margin-bottom: 0;
    list-style-type: none;
    padding: 0;
    float: left;
    position: relative;

    li {
      display: inline-block;
      text-align: center;
      width: 104px;
      text-transform: uppercase;
      font-size: $font-size-medium;

      &.wishlist {
        width: 124px;
      }

      &.nav-trigger {
        background: image-url('selectmenu-caret.png') no-repeat right transparent;
        padding-right: 18px;
      }

      a {
        display: block;
        color: $dark-grey;
        &:hover {
          text-decoration: underline;
        }
        position: relative;

        .badge {
          position: absolute;
          background-color: $green;
          color: $white;
          top: -9px;
          right: -1px;
        }
      }
    }

    ul.dropdown {
      position: absolute;
      background-color: rgba($white, 0.85);
      z-index: 10;
      padding: 13px 0 0 0;
      display: none;

      li {
        text-align: left;
        display: block;
        width: auto;
        border-bottom: 1px solid $green;

        a {
          color: $dark-grey;
          display: block;
          position: static;
          padding: 3px $grid-gutter-width/2;

          &:hover {
            background-color: $green;
            text-decoration: none;
            color: $white;
          }
        }
      }
    }
  }
}

#layout-photo-slideshow {
  height: 450px;
  background-color: $light-grey;

  & > div > div {
    height: 100%;
    width: 100%;
  }

  &.fixed-width {
    margin-left: auto;
    margin-right: auto;

    @media (max-width: $screen-xs-max) {
      display: none;
    }
    @media (min-width: $screen-sm-min) {
      width: $container-sm - $grid-gutter-width;
    }
    @media (min-width: $screen-md-min) {
      width: $container-md - $grid-gutter-width;
    }
    @media (min-width: $screen-lg-min) {
      width: $container-lg - $grid-gutter-width;
    }
  }

  position: relative;
  top: 0px;
  left: 0px;

  .gallery {
    height: 100%;
    width: 100%;

    position: absolute;
    left: 0px;
    top: 0px;
    overflow: hidden;

    &.multiple {
      cursor: move;
    }
  }

  /* jssor slider bullet navigator skin 16 css */
  /*
  .jssorb16 div           (normal)
  .jssorb16 div:hover     (normal mouseover)
  .jssorb16 .av           (active)
  .jssorb16 .av:hover     (active mouseover)
  .jssorb16 .dn           (mousedown)
  */
  .jssorb16 {
    position: absolute;
    bottom: 16px;
    left: 6px;

    div[u=prototype] {
      position: absolute;
      width: 21px;
      height: 21px;
    }
  }
  .jssorb16 div, .jssorb16 div:hover, .jssorb16 .av {
      background: image-url('jquery-slider/b16.png') no-repeat;
      overflow:hidden;
      cursor: pointer;
  }
  .jssorb16 div { background-position: -5px -5px; }
  .jssorb16 div:hover, .jssorb16 .av:hover { background-position: -35px -5px; }
  .jssorb16 .av { background-position: -65px -5px; }
  .jssorb16 .dn, .jssorb16 .dn:hover { background-position: -95px -5px; }

  /* jssor slider arrow navigator skin 02 css */
  /*
  .jssora02l              (normal)
  .jssora02r              (normal)
  .jssora02l:hover        (normal mouseover)
  .jssora02r:hover        (normal mouseover)
  .jssora02ldn            (mousedown)
  .jssora02rdn            (mousedown)
  */
  .jssora02l, .jssora02ldn {
    width: 55px;
    height: 55px;
    top: 123px;
    left: 8px;
  }
  .jssora02r, .jssora02rdn {
    width: 55px;
    height: 55px;
    top: 123px;
    right: 8px
  }
  .jssora02l, .jssora02r, .jssora02ldn, .jssora02rdn {
    position: absolute;
    cursor: pointer;
    display: block;
    background: image-url('jquery-slider/a02.png') no-repeat;
    overflow:hidden;
  }
  .jssora02l { background-position: -3px -33px; }
  .jssora02r { background-position: -63px -33px; }
  .jssora02l:hover { background-position: -123px -33px; }
  .jssora02r:hover { background-position: -183px -33px; }
  .jssora02ldn { background-position: -3px -33px; }
  .jssora02rdn { background-position: -63px -33px; }
}

#layout-store-search {
  min-height: 88px;
  background-color: $dark-grey;
  background-image: image-url('bg_fit_my_4x4.jpg');
  background-position: 50% 0;
  background-repeat: no-repeat;
  background-size: cover;
  color: $white;

  @media (max-width: $screen-xs-max) {
    display: none;
  }

  h3 {
    display: inline-block;
    float: left;
    margin-top: 30px;
  }

  form {
    display: inline-block;
    margin-top: 25px;

    input, button {
      height: 40px;
      font-size: 20px;
    }

    input {
      @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
        width: 400px;
      }
      @media (min-width: $screen-md-min) {
        width: 600px;
      }
    }

    button {
      margin-left: 30px;
    }
  }
}

#layout-fit-my-4x4 {
  min-height: 88px;
  background-color: $dark-grey;
  background-image: image-url('bg_fit_my_4x4.jpg');
  background-position: 50% 0;
  background-repeat: no-repeat;
  background-size: cover;
  color: $white;

  .vehicle-selector {
    margin-top: 24px;

    .icon {
      display: inline-block;
      vertical-align: top;
    }

    .styled-select {
      margin-top: 5px;
    }

    @media (max-width: $screen-xs-max) {
      .control, .icon {
        padding-left: 0;
        padding-right: 0;
      }
    }

    @media (min-width: $screen-sm-min) {
      .control, .icon {
        padding-left: 0;
      }
    }

    .button {
      padding-left: 0;
      padding-right: 0;

      .go {
        background-color: $green;
        color: $white;
        //border-radius: 4px;
        text-transform: uppercase;
        margin-top: 5px;
      }
    }
  }
}
/* ... */

